[package]
name = "ckbes"
version = "0.1.3"
edition = "2021"
description = "CKB Easy Script is a framework for developing ckb contracts."
license = "MIT"

[dependencies]
blake2b-ref = "0.3"
linked_list_allocator = "0.10"

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
