[package]
name = "ckbes"
version = "0.120.0"
edition = "2024"
description = "CKB Easy Script is a framework for developing ckb contracts."
license = "MIT"

[dependencies]
blake2ya = "1.0"
linked_list_allocator = "0.10"
spinning_top = "0.3"

[profile.release]
codegen-units = 1
overflow-checks = true
strip = true
